<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Main Menus -->
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/notifications"
            android:checkable="true"
            android:checked="false"
            android:icon="@drawable/ic_notification"
            android:title="@string/notification" />


    </group>

    <!--  Sub Menus  -->
    <item android:title="@string/others">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/share_app"
                    android:icon="@drawable/ic_share"
                    android:title="@string/share" />

                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/help"
                    android:icon="@drawable/ic_help"
                    android:title="@string/help" />
            </group>
        </menu>
    </item>


</menu>