<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vvconnect.android.vvhereapp.InitialUserProfileActivity">

    <ImageButton
        android:id="@+id/ib_profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/default_profile"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_default_profile_iv_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/upload_optional_profile_picture"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/ib_profile_image"
        app:layout_constraintLeft_toLeftOf="@id/ib_profile_image"
        app:layout_constraintRight_toRightOf="@id/ib_profile_image"
        app:layout_constraintTop_toBottomOf="@id/ib_profile_image" />

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/ib_profile_image" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_first_name" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/u2713_done"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_last_name" />

</android.support.constraint.ConstraintLayout>
